	Updated: Layout according changes from vendor libraries

INSTALLER
	Changed: Downgrade of SQL server is no longer allowed by installer
	Changed: Package uninstallation task is now triggered after packages installation
	Fixed: Composer home directory has been reset back to /root/.composer by mistake
	Fixed: Package which are scheduled for installation must not be removed
	Fixed: Download zip archives instead of cloning sources which include useless VCS information (composer packages)
	Fixed: When switching to another SQL server debian version flag file must be removed
	Fixed: Wrong template name passed to the onLoadTemplate event (MySQL server implementation)

PLUGINS
	Fixed: Plugin backend files must no longer be removed on error
	Updated: Plugin API to version 0.2.11

VENDOR
	Updated: jQuery library to version 1.1.11
	Updated: jQuery UI library to version 1.1.11
	Updated: jQuery DataTables plugin to version 1.10.2

------------------------------------------------------------------------------------------------------------------------
1.1.13
------------------------------------------------------------------------------------------------------------------------

2014-07-20: Laurent Declercq
	RELEASE i-MSCP 1.1.13

DOCS
	Updated: INSTALL files

SERVICES
	Fixed: Apache mod_version module is not always static
	Fixed: The parameter innodb_use_native_aio is not available in MySQL < 5.5

------------------------------------------------------------------------------------------------------------------------
1.1.12
------------------------------------------------------------------------------------------------------------------------

2014-07-16: Laurent Declercq
	RELEASE i-MSCP 1.1.12

ADDONS
	Fixed: Quotation marks must be escaped in PhpMyAdmin configuration file
	Fixed: Quotation marks must be escaped in Roundcube configuration file
	Updated: Required Roundcube addon package version is now 0.5.0.*@dev

CONFIGS